Added tasks 2 and 3 (minor edits)

--- a/DATA2001_assignment.ipynb
+++ b/DATA2001_assignment.ipynb
@@ -5278,18 +5278,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "id": "070c346b",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error encountered: \n",
-      "This Connection is closed\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -5311,20 +5303,230 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>z_business</th>\n",
+       "      <th>z_stops</th>\n",
+       "      <th>z_schools</th>\n",
+       "      <th>z_poi</th>\n",
+       "      <th>score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.619773</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.213662</td>\n",
+       "      <td>0.302919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.189020</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.791808</td>\n",
+       "      <td>0.353706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.462266</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.470616</td>\n",
+       "      <td>0.282340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.605274</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.534854</td>\n",
+       "      <td>0.242297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.239293</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.502735</td>\n",
+       "      <td>0.322561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.491754</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.268125</td>\n",
+       "      <td>0.444325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.613073</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.064821</td>\n",
+       "      <td>0.388945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-0.560901</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.027231</td>\n",
+       "      <td>0.369661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.440715</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.043291</td>\n",
+       "      <td>0.401931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-0.537522</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.436171</td>\n",
+       "      <td>0.869739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>-0.334763</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.187827</td>\n",
+       "      <td>0.463332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.137303</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.791808</td>\n",
+       "      <td>0.341975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.046571</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.492960</td>\n",
+       "      <td>0.631703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>-0.054286</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.295940</td>\n",
+       "      <td>0.775852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1.011131</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.936344</td>\n",
+       "      <td>0.518688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>-0.136491</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.374258</td>\n",
+       "      <td>0.375018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>-0.117104</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.823927</td>\n",
+       "      <td>0.280692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>-0.627746</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.697429</td>\n",
+       "      <td>0.744537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>-0.544816</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.199582</td>\n",
+       "      <td>0.658084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0.336845</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.647272</td>\n",
+       "      <td>0.423011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>-0.478853</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.213662</td>\n",
+       "      <td>0.333474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>-0.235406</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.328059</td>\n",
+       "      <td>0.748881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>4.153018</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.610847</td>\n",
+       "      <td>0.927046</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "    z_business z_stops  z_schools     z_poi     score\n",
+       "0    -0.619773    None        0.0 -0.213662  0.302919\n",
+       "1     0.189020    None        0.0 -0.791808  0.353706\n",
+       "2    -0.462266    None        0.0 -0.470616  0.282340\n",
+       "3    -0.605274    None        0.0 -0.534854  0.242297\n",
+       "4    -0.239293    None        0.0 -0.502735  0.322561\n",
+       "5    -0.491754    None        0.0  0.268125  0.444325\n",
+       "6     0.613073    None        0.0 -1.064821  0.388945\n",
+       "7    -0.560901    None        0.0  0.027231  0.369661\n",
+       "8    -0.440715    None        0.0  0.043291  0.401931\n",
+       "9    -0.537522    None        0.0  2.436171  0.869739\n",
+       "10   -0.334763    None        0.0  0.187827  0.463332\n",
+       "11    0.137303    None        0.0 -0.791808  0.341975\n",
+       "12    0.046571    None        0.0  0.492960  0.631703\n",
+       "13   -0.054286    None        0.0  1.295940  0.775852\n",
+       "14    1.011131    None        0.0 -0.936344  0.518688\n",
+       "15   -0.136491    None        0.0 -0.374258  0.375018\n",
+       "16   -0.117104    None        0.0 -0.823927  0.280692\n",
+       "17   -0.627746    None        0.0  1.697429  0.744537\n",
+       "18   -0.544816    None        0.0  1.199582  0.658084\n",
+       "19    0.336845    None        NaN -0.647272  0.423011\n",
+       "20   -0.478853    None        0.0 -0.213662  0.333474\n",
+       "21   -0.235406    None        0.0  1.328059  0.748881\n",
+       "22    4.153018    None        0.0 -1.610847  0.927046"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
