--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "83f5cd55",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fb239eba",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bc8fa656",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "de0238d4",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
        "4        78630.0      91981.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "69933189",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        "[642 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "bbe6df36",
    "metadata": {},
    "outputs": [
@@ -489,7 +489,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e4c36c39",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
        "[12217 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "cd405514",
    "metadata": {},
    "outputs": [
@@ -922,7 +922,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2172e42f",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1082,7 @@
        "[373 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "074453fd",
    "metadata": {},
    "outputs": [],
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3b2a3e93",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1327,7 @@
        "32  POLYGON ((151.32349 -33.42779, 151.32342 -33.4...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "07c9630a",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1534,7 @@
        "32  MULTIPOLYGON (((151.32348639265098 -33.4277852...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "bf6c47c3",
    "metadata": {},
    "outputs": [
@@ -1729,7 +1729,7 @@
        "9  0106000020BB10000001000000010300000001000000A7...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "062040f8",
    "metadata": {},
    "outputs": [
@@ -1879,7 +1879,7 @@
        "4  151.198882            NaN         201510                    0           NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "e963b706",
    "metadata": {},
    "outputs": [
@@ -2104,7 +2104,7 @@
        "[114718 rows x 8 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "a30e8cdc",
    "metadata": {},
    "outputs": [
@@ -2261,7 +2261,7 @@
        "9  0101000020BB1000006EC9C4A4C8E56240FECD638521F4...  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2303,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "a203dfa6",
    "metadata": {},
    "outputs": [
@@ -2487,7 +2487,7 @@
        "4  POLYGON ((151.15379 -33.75586, 151.15404 -33.7...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2500,7 +2500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "8d4752d8",
    "metadata": {},
    "outputs": [
@@ -2684,7 +2684,7 @@
        "4  MULTIPOLYGON (((151.1537883781186 -33.75586174...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2699,7 +2699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "efadd63b",
    "metadata": {},
    "outputs": [
@@ -2808,7 +2808,7 @@
        "9    4286    PRIMARY  0106000020BB10000001000000010300000001000000AE..."
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2838,7 +2838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "f80e6dcb",
    "metadata": {},
    "outputs": [
@@ -2912,7 +2912,7 @@
        "4   3918    PRIMARY  MULTIPOLYGON (((151.1537883781186 -33.75586174..."
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2925,7 +2925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "52d14ea1",
    "metadata": {},
    "outputs": [
@@ -3109,7 +3109,7 @@
        "4  MULTIPOLYGON (((150.69513440644116 -33.7562688...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3123,7 +3123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "d3063f5a",
    "metadata": {},
    "outputs": [
@@ -3232,7 +3232,7 @@
        "9    8536  HIGH_COED  0106000020BB1000000100000001030000000100000055..."
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3262,7 +3262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "df9ec206",
    "metadata": {},
    "outputs": [
@@ -3440,7 +3440,7 @@
        "4  POLYGON ((151.28072 -33.83287, 151.28095 -33.8...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3453,7 +3453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "3c768012",
    "metadata": {},
    "outputs": [
@@ -3631,7 +3631,7 @@
        "4  MULTIPOLYGON (((151.28072275958445 -33.8328728...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3645,7 +3645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "be718775",
    "metadata": {},
    "outputs": [
@@ -3754,7 +3754,7 @@
        "9    8556  CENTRAL_HIGH  0106000020BB1000000100000001030000000100000028..."
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3800,7 +3800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "2eb05bb4",
    "metadata": {},
    "outputs": [
@@ -3810,7 +3810,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3822,7 +3822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "fec0d4ff",
    "metadata": {},
    "outputs": [],
@@ -3861,7 +3861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "a8ea586b",
    "metadata": {},
    "outputs": [],
@@ -3895,7 +3895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "a434de49",
    "metadata": {},
    "outputs": [],
@@ -3932,7 +3932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "1225068a",
    "metadata": {},
    "outputs": [],
@@ -3966,7 +3966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "98635e78",
    "metadata": {},
    "outputs": [
@@ -4030,7 +4030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "d12224c2",
    "metadata": {},
    "outputs": [
@@ -4038,8 +4038,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw metrics:\n",
-      "    sa2_code21          sa4_name21  businesses_per_1000  stops_cnt  \\\n",
+      "   sa2_code21          sa4_name21  businesses_per_1000  stops_cnt  \\\n",
       "0   116011303  Sydney - Blacktown            32.766849      228.0   \n",
       "1   116011304  Sydney - Blacktown             8.967745      234.0   \n",
       "2   116011306  Sydney - Blacktown             9.278482      221.0   \n",
@@ -4051,8 +4050,7 @@
       "1          3.360717    102.0  \n",
       "2          2.711324    173.0  \n",
       "3          3.203661    175.0  \n",
-      "4          2.366864     74.0   \n",
-      "\n"
+      "4          2.366864     74.0  \n"
      ]
     }
    ],
@@ -4060,6 +4058,7 @@
     "conn.execute(text(\"ROLLBACK\"))\n",
     "\n",
     "sql = \"\"\"\n",
+    "CREATE OR REPLACE VIEW z_score AS\n",
     "WITH\n",
     "  sa2_list AS (\n",
     "    SELECT sr.sa2_code21, sr.sa4_name21\n",
@@ -4151,10 +4150,10 @@
     "LEFT JOIN pois    poi USING (sa2_code21)\n",
     "ORDER BY l.sa2_code21;\n",
     "\"\"\"\n",
-    "\n",
-    "df = query(conn, sql)\n",
+    "conn.execute(text(sql))\n",
+    "df = query(conn, \"SELECT * FROM z_score;\")\n",
     "df.columns = [c.lower() for c in df.columns]\n",
-    "print(\"Raw metrics:\\n\", df.head(), \"\\n\")"
+    "print(df.head())"
    ]
   },
   {
@@ -4162,78 +4161,74 @@
    "id": "00c22c90",
    "metadata": {},
    "source": [
-    "#### B. Python code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "65d8e7e2",
-   "metadata": {},
-   "source": [
-    "Create PostGIS table + Insert value"
+    "#### B. Calculating the final score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "e0233c6d",
+   "execution_count": null,
+   "id": "dbdf78de",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "73"
+       "<sqlalchemy.engine.cursor.CursorResult at 0x292c5583a60>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = query(conn, sql)\n",
-    "df.columns = [c.lower() for c in df.columns]\n",
-    "\n",
-    "for raw, zcol in [\n",
-    "    (\"businesses_per_1000\", \"businesses_z\"),\n",
-    "    (\"stops_cnt\",           \"stops_z\"),\n",
-    "    (\"schools_per_1000\",    \"schools_z\"),\n",
-    "    (\"poi_cnt\",             \"poi_z\")\n",
-    "]:\n",
-    "    mu    = df[raw].mean()\n",
-    "    sigma = df[raw].std(ddof=0) or 1\n",
-    "    df[zcol] = (df[raw] - mu) / sigma\n",
-    "\n",
-    "z_sum       = df[[\"businesses_z\",\"stops_z\",\"schools_z\",\"poi_z\"]].sum(axis=1)\n",
-    "df[\"score\"] = 1 / (1 + np.exp(-z_sum))\n",
+    "conn.execute(text(\"ROLLBACK\"))\n",
     "\n",
     "conn.execute(text(\"\"\"\n",
     "DROP TABLE IF EXISTS regions_scores;\n",
-    "CREATE TABLE regions_scores (\n",
-    "  sa2_code21   INT PRIMARY KEY,\n",
-    "  sa4_name21   TEXT,\n",
-    "  businesses_z DOUBLE PRECISION,\n",
-    "  stops_z      DOUBLE PRECISION,\n",
-    "  schools_z    DOUBLE PRECISION,\n",
-    "  poi_z        DOUBLE PRECISION,\n",
-    "  score        DOUBLE PRECISION\n",
-    ");\n",
-    "\"\"\"))\n",
     "\n",
-    "df[[\n",
-    "    \"sa2_code21\",\n",
-    "    \"sa4_name21\",\n",
-    "    \"businesses_z\",\n",
-    "    \"stops_z\",\n",
-    "    \"schools_z\",\n",
-    "    \"poi_z\",\n",
-    "    \"score\"\n",
-    "]].to_sql(\n",
-    "    \"regions_scores\",\n",
-    "    conn,\n",
-    "    if_exists=\"append\",\n",
-    "    index=False\n",
-    ")\n"
+    "CREATE TABLE regions_scores AS\n",
+    "WITH z AS (\n",
+    "  SELECT\n",
+    "    sa2_code21,\n",
+    "    sa4_name21,\n",
+    "\n",
+    "    (businesses_per_1000 - AVG(businesses_per_1000) OVER ()) \n",
+    "      / NULLIF(STDDEV_POP(businesses_per_1000) OVER (),0)\n",
+    "      AS businesses_z,\n",
+    "\n",
+    "    (stops_cnt - AVG(stops_cnt) OVER ()) \n",
+    "      / NULLIF(STDDEV_POP(stops_cnt) OVER (),0)\n",
+    "      AS stops_z,\n",
+    "\n",
+    "    (schools_per_1000 - AVG(schools_per_1000) OVER ()) \n",
+    "      / NULLIF(STDDEV_POP(schools_per_1000) OVER (),0)\n",
+    "      AS schools_z,\n",
+    "\n",
+    "    (poi_cnt - AVG(poi_cnt) OVER ()) \n",
+    "      / NULLIF(STDDEV_POP(poi_cnt) OVER (),0)\n",
+    "      AS poi_z\n",
+    "\n",
+    "  FROM z_score   -- your view of raw metrics\n",
+    ")\n",
+    "\n",
+    "SELECT\n",
+    "  sa2_code21,\n",
+    "  sa4_name21,\n",
+    "  businesses_z,\n",
+    "  stops_z,\n",
+    "  schools_z,\n",
+    "  poi_z,\n",
+    "\n",
+    "  1.0 / (\n",
+    "    1.0 + EXP(\n",
+    "      - (businesses_z + stops_z + schools_z + poi_z)\n",
+    "    )\n",
+    "  ) AS score\n",
+    "\n",
+    "FROM z\n",
+    "ORDER BY score DESC;\n",
+    "\"\"\"))"
    ]
   },
   {
@@ -4246,7 +4241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "110a661a",
    "metadata": {},
    "outputs": [
@@ -4426,7 +4421,7 @@
        "[73 rows x 7 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4457,7 +4452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "2b8922da",
    "metadata": {},
    "outputs": [
@@ -4898,7 +4893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "80e694c5",
    "metadata": {},
    "outputs": [
@@ -5243,7 +5238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "42b6b594",
    "metadata": {},
    "outputs": [
