--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -4233,16 +4233,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1858d39",
+   "id": "3a692ea6",
    "metadata": {},
    "source": [
-    "#### C. Sanity Check"
+    "#### D. Filter by SA4 regions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1137ef71",
+   "metadata": {},
+   "source": [
+    "For all SA4 regions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "110a661a",
+   "execution_count": 46,
+   "id": "1961474d",
    "metadata": {},
    "outputs": [
     {
@@ -4421,7 +4429,7 @@
        "[73 rows x 7 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4432,14 +4440,6 @@
     "FROM regions_scores\n",
     "ORDER BY score DESC\n",
     "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3a692ea6",
-   "metadata": {},
-   "source": [
-    "#### D. Filter by SA4 regions"
    ]
   },
   {
